syntax = "proto3";

package mizer;

service TransportApi {
  rpc SubscribeTransport (SubscribeTransportRequest) returns (stream Transport) {}
  rpc SetState (SetTransportRequest) returns (Transport) {}
  rpc SetBpm (SetBpmRequest) returns (Transport) {}
}

message SubscribeTransportRequest {
}

message Transport {
  TransportState state = 1;
  double speed = 2;
  Timecode timecode = 3;
}

message Timecode {
  uint64 frames = 1;
  uint64 seconds = 2;
  uint64 minutes = 3;
  uint64 hours = 4;
}

message SetTransportRequest {
  TransportState state = 1;
}

message SetBpmRequest {
  double bpm = 1;
}

enum TransportState {
  STOPPED = 0;
  PAUSED = 1;
  PLAYING = 2;
}
